# anybioimage

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  anyimage.py  image_notebook.py  mkdocs.yml  pyproject.toml  sam_notebook.py
.claude/skills/: anybioimage.skill
.claude/skills/anybioimage/: SKILL.md
.claude/skills/anybioimage/references/: api_reference.md  examples.md
.claude/skills/anyimage/: SKILL.md
.claude/skills/anyimage/references/: api_reference.md  examples.md
.claude/skills/anywidget-generator/: SKILL.md
.github/workflows/: bundle.yml  ci.yml  docs.yml  publish.yml
anybioimage/: __init__.py  utils.py  viewer.py
anybioimage/backends/: __init__.py  canvas2d.py  viv.py
anybioimage/frontend/shared/: canvas2d.js  chrome.js
anybioimage/frontend/viewer/: .gitignore  build.config.mjs  package-lock.json  package.json
anybioimage/frontend/viewer/src/: App.jsx  VivCanvas.jsx  entry.js  pixel-info.js
anybioimage/frontend/viewer/src/chrome/: DimControls.jsx  NumericInput.jsx  NumericInput.test.jsx  StatusBar.jsx  Toolbar.jsx  icons.js
anybioimage/frontend/viewer/src/chrome/LayersPanel/: AnnotationsSection.jsx  AnnotationsSection.test.js  ExportFooter.jsx  ImageSection.jsx  LayersPanel.jsx  MasksSection.jsx  MasksSection.test.js  MetadataSection.jsx
anybioimage/frontend/viewer/src/interaction/: InteractionController.js  InteractionController.test.js  keyboard.js  keyboard.test.js
anybioimage/frontend/viewer/src/interaction/tools/: pan.js  point.js  point.test.js  polygon.js  polygon.test.js  rect.js  rect.test.js  select.js  select.test.js
anybioimage/frontend/viewer/src/model/: useModelTrait.js
anybioimage/frontend/viewer/src/render/: DeckCanvas.jsx  onHoverPixelInfo.js  onHoverPixelInfo.test.js
anybioimage/frontend/viewer/src/render/layers/: annotationsToLayers.js  annotationsToLayers.test.js  buildImageLayer.js  buildImageLayer.test.js  buildMaskLayers.js  buildMaskLayers.test.js  buildScaleBar.js  buildScaleBar.test.js
anybioimage/frontend/viewer/src/render/luts/: VivLutExtension.js  index.js  index.test.js
anybioimage/frontend/viewer/src/render/pixel-sources/: MaskSourceBridge.js  MaskSourceBridge.test.js  anywidget-source.js  anywidget-source.test.js  zarr-source.js
anybioimage/frontend/viewer/src/util/: perf.js  perf.test.js
anybioimage/frontend/viv/: build.config.mjs  package-lock.json  package.json
anybioimage/frontend/viv/src/: VivCanvas.jsx  channel-sync.js  entry.js  zarr-source.js
anybioimage/mixins/: __init__.py  annotations.py  image_loading.py  mask_management.py  pixel_source.py  plate_loading.py  sam_integration.py
anyimage/: __init__.py  anyimage.py  utils.py  viewer.py
anyimage/mixins/: annotations.py  image_loading.py  plate_loading.py
docs/: api.md  getting-started.md  index.md
docs/superpowers/notes/: phase2-5-perf-baseline.md  widget-isolation-audit.md
docs/superpowers/plans/: 2026-04-16-viv-backend.md  2026-04-19-phase2-5-hardening.md  2026-04-19-unified-viewer-phase1.md  2026-04-19-unified-viewer-phase2.md
docs/superpowers/specs/: 2026-04-16-viv-backend-design.md  2026-04-19-phase2-5-hardening-design.md  2026-04-19-unified-viewer-design.md
docs/usage/: hcs.md  masks.md  sam.md
examples/: create_test_plate.py  full_demo.py  image_notebook.py  plate_notebook.py  sam_notebook.py
examples/jupyter/: anybioimage_example.ipynb  anyimage_example.ipynb
scripts/: gen_luts.py
tests/: test_annotations_unified.py  test_backends.py  test_image_loading_slim.py  test_legacy_kwarg.py  test_mask_transport.py  test_metadata_extraction.py  test_mixins.py  test_pixel_source.py  test_plate_viv.py  test_sam_protocol.py  test_utils.py  test_viewer_chunk_wiring.py  test_viewer_integration.py  test_zarr_detection.py  test_zarr_metadata.py
tests/integration/: conftest.py  test_channel_toggle_perf.py  test_console_hygiene.py  test_harness_smoke.py  test_keyboard_isolation.py  test_remote_zarr_renders.py  test_select_picks.py  test_t_scrub_perf.py  test_z_scrub_perf.py
tests/integration/fixtures/: demo_remote_zarr.py  demo_small.py  demo_two_widgets.py
tests/integration/helpers/: pixels.py  widget.py
tests/playwright/: conftest.py  test_phase1_channels.py  test_phase1_core.py  test_phase1_display.py  test_phase2_draw_point.py  test_phase2_draw_polygon.py  test_phase2_draw_rect.py  test_phase2_sam_flow.py  test_viv_smoke.py
