[project]
name = "anybioimage"
version = "0.3.0"
description = "Interactive image viewer widget for Jupyter/marimo with annotation tools and SAM integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Maarten Paul" }
]
keywords = ["bioimage", "viewer", "widget", "anywidget", "marimo", "jupyter", "segmentation", "SAM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "anywidget>=0.9.0",
    "traitlets>=5.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
sam = [
    "ultralytics>=8.0.0",
]
contours = [
    "scipy>=1.7.0",
]
bioio = [
    "bioio>=1.0.0",
    "bioio-tifffile>=1.0.0",
]
dev = [
    "marimo>=0.19.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.1a0",
    "playwright>=1.47",
    "pytest-playwright>=0.5",
]
all = [
    "anybioimage[contours,bioio,dev]",
]
complete = [
    "anybioimage[sam,contours,bioio,dev]",
]

[project.urls]
Homepage = "https://github.com/maartenpaul/anybioimage"
Repository = "https://github.com/maartenpaul/anybioimage"
Documentation = "https://maartenpaul.github.io/anybioimage/"
Changelog = "https://github.com/maartenpaul/anybioimage/blob/main/CHANGELOG.md"
Issues = "https://github.com/maartenpaul/anybioimage/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anybioimage"]
exclude = [
    "anybioimage/frontend/viv/node_modules/",
    "anybioimage/frontend/viv/src/",
    "anybioimage/frontend/viv/package.json",
    "anybioimage/frontend/viv/package-lock.json",
    "anybioimage/frontend/viv/build.config.mjs",
    "anybioimage/frontend/viv/.gitignore",
]

[tool.hatch.build.targets.wheel.force-include]
"anybioimage/frontend/shared/canvas2d.js" = "anybioimage/frontend/shared/canvas2d.js"
"anybioimage/frontend/viv/dist/viv-bundle.js" = "anybioimage/frontend/viv/dist/viv-bundle.js"

[tool.hatch.build.targets.sdist]
include = [
    "anybioimage/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "anybioimage/frontend/viv/node_modules/",
]

[dependency-groups]
dev = [
    "marimo>=0.19.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.1a0",
    "playwright>=1.47",
    "pytest-playwright>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
